[B]Version v2.0.6[/B]
Added caching of menu section to make things work faster.

[B]Version v2.0.3 - v2.0.5[/B]
Enabled YouTube Menu link with pre-loaded list of Indian Entertainment channels

[B]Version v1.9.9[/B]

DirectPlay is redefined as PDP (Preferred Direct Play). 
Continuous Play: a new replacement for DirectPlay existing functionality

[B]Version v1.9.7[/B]

Enabled HD Movies and other categories. Caching and pagination added.

[B]Version v1.9.1[/B]

New way to watch DESI MOVIES coming up!
